@@ -4,6 +4,8 @@ v1.0.x -
 Additions:
 * Camera:
 	- Update(bool Interpolated = false)
+* ChallengeParam:
+	- IsBeastPath
 * GridEntity
 	- [Get/Set/Reset]WaterClipFlags
 * Entity
